; ModuleID = '/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-data.c_create_new_cache_item.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-data.c_create_new_cache_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.entry = type { i32, i32, i64, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@cache_size = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @create_new_cache_item(%struct.entry* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.entry*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.entry* %0, %struct.entry** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.entry*, %struct.entry** %4, align 8
  %9 = getelementptr inbounds %struct.entry, %struct.entry* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 8
  %10 = load i32, i32* %6, align 4
  %11 = sext i32 %10 to i64
  %12 = mul i64 %11, 1
  %13 = trunc i64 %12 to i32
  %14 = call i32 @zzmalloc(i32 %13)
  %15 = load %struct.entry*, %struct.entry** %4, align 8
  %16 = getelementptr inbounds %struct.entry, %struct.entry* %15, i32 0, i32 3
  store i32 %14, i32* %16, align 8
  %17 = load %struct.entry*, %struct.entry** %4, align 8
  %18 = getelementptr inbounds %struct.entry, %struct.entry* %17, i32 0, i32 1
  store i32 -1, i32* %18, align 4
  %19 = load %struct.entry*, %struct.entry** %4, align 8
  %20 = getelementptr inbounds %struct.entry, %struct.entry* %19, i32 0, i32 4
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  store i32 -2, i32* %21, align 4
  %22 = load i32, i32* %6, align 4
  %23 = icmp sge i32 %22, 0
  br i1 %23, label %24, label %34

24:                                               ; preds = %3
  %25 = load %struct.entry*, %struct.entry** %4, align 8
  %26 = getelementptr inbounds %struct.entry, %struct.entry* %25, i32 0, i32 3
  %27 = load i32, i32* %26, align 8
  %28 = load i8*, i8** %5, align 8
  %29 = load i32, i32* %6, align 4
  %30 = sext i32 %29 to i64
  %31 = mul i64 %30, 1
  %32 = trunc i64 %31 to i32
  %33 = call i32 @memcpy(i32 %27, i8* %28, i32 %32)
  br label %34

34:                                               ; preds = %24, %3
  %35 = load %struct.entry*, %struct.entry** %4, align 8
  %36 = getelementptr inbounds %struct.entry, %struct.entry* %35, i32 0, i32 2
  store i64 0, i64* %36, align 8
  %37 = load i32, i32* %6, align 4
  %38 = sext i32 %37 to i64
  %39 = mul i64 %38, 1
  %40 = load i32, i32* @cache_size, align 4
  %41 = sext i32 %40 to i64
  %42 = add i64 %41, %39
  %43 = trunc i64 %42 to i32
  store i32 %43, i32* @cache_size, align 4
  ret void
}

declare dso_local i32 @zzmalloc(i32) #1

declare dso_local i32 @memcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
